# Fine-tune-Dataset-Quality-Scorer

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  sample_dataset.jsonl
examples/datasets/: fresh_dataset.jsonl  sample_dataset.fixed.jsonl
ml_project_0853/src/: checks.py  main.py  reporter.py
ml_project_0853/tests/: test_checks.py
ml_project_0853/tests/fixtures/: mixed_dataset.jsonl
src/: __init__.py  __main__.py  checks.py  llm_reviewer.py  main.py  reporter.py
tests/: conftest.py  test_checks.py
tests/fixtures/: bad_dataset.jsonl  good_dataset.jsonl
