[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-quality-scorer"
version = "1.1.0"
description = "Fine-tune Dataset Quality Scorer — analyse JSONL datasets before LLM training"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hf = ["datasets>=2.14.0", "huggingface-hub>=0.20.0"]
llm = ["anthropic>=0.40.0"]
all = ["datasets>=2.14.0", "huggingface-hub>=0.20.0", "anthropic>=0.40.0"]
dev = ["pytest>=7.0.0", "pytest-mock>=3.0.0"]

[project.scripts]
dqs = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
